<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_image_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.testproject.bingimageviewer.ui.ImageDetailActivity">

    <ImageView
        android:id="@+id/image_detail_imageView"
        android:layout_width="@dimen/image_detail_image_size"
        android:layout_height="@dimen/image_detail_image_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/image_detail_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/image_detail_text_submit"
        android:background="@drawable/drawable_btn_bg"
        android:enabled="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/image_detail_button_submit"
        android:layout_below="@id/image_detail_imageView"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/image_detail_category_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_detail_category"
            android:textSize="18dp"
            android:layout_marginLeft="2dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <EditText
                android:id="@+id/image_detail_editText_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_detail_brand" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/image_detail_editText_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_detail_price"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/image_detail_date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_detail_date"
            android:textSize="18dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</RelativeLayout>
